Cassandra fattolong (3 test per ognuno dei 6 workload)

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 # Redis
-REDIS_HOST=redis-node-1
-REDIS_PORT=6379
+REDIS_NODES=redis-node1:6379,redis-node2:6379,redis-node3:6379
 
 # MongoDB router
-MONGO_HOST=mongos
+MONGO_URL=mongodb://mongo-mongos:27017/ycsb?w=1
 
 # Cassandra hosts (comma-separated)
 CASS_HOSTS=cassandra-1,cassandra-2,cassandra-3
