--- a/cassandra/docker-compose.yml
+++ b/cassandra/docker-compose.yml
@@ -1,23 +1,102 @@
-services:
-  cassandra-1:
-    image: bitnami/cassandra:4.1
-    environment:
-      - CASSANDRA_CLUSTER_NAME=nosql-cluster
-      - CASSANDRA_SEEDS=cassandra-1,cassandra-2,cassandra-3
-    networks: [cass-net]
-  cassandra-2:
-    image: bitnami/cassandra:4.1
-    environment:
-      - CASSANDRA_CLUSTER_NAME=nosql-cluster
-      - CASSANDRA_SEEDS=cassandra-1,cassandra-2,cassandra-3
-    networks: [cass-net]
-  cassandra-3:
-    image: bitnami/cassandra:4.1
-    environment:
-      - CASSANDRA_CLUSTER_NAME=nosql-cluster
-      - CASSANDRA_SEEDS=cassandra-1,cassandra-2,cassandra-3
-    networks: [cass-net]
+# cassandra/docker-compose.yml (Revisione basata sul file trovato)
+version: "3.8"
 
 networks:
-  cass-net:
+  cassandra-net: # Rete interna per comunicazione tra nodi Cassandra
     driver: bridge
+  shared-net: # Rete esterna per comunicazione con YCSB
+    external: true
+
+services:
+  cassandra-1:
+    image: "cassandra:4.1"
+    container_name: "cassandra-1"
+    hostname: "cassandra-1" # Aggiunto per coerenza
+    ports:
+      # - 7000:7000 # Opzionale, non strettamente necessario esporlo all'host
+      - 9042:9042 # Mantenuto per debug da host se necessario
+    networks:
+      - cassandra-net
+      - shared-net # Aggiunta rete condivisa
+    environment:
+      - CASSANDRA_CLUSTER_NAME=nosql-benchmark-cluster # Nome cluster aggiornato
+      - CASSANDRA_SEEDS=cassandra-1,cassandra-2 # Aggiornato per usare 2 seed (sé stesso e il 2)
+      - CASSANDRA_DC=dc1 # Nome DC arbitrario, coerente
+      - CASSANDRA_RACK=rack1 # Nome Rack arbitrario, coerente
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_LISTEN_ADDRESS=auto
+      - CASSANDRA_RPC_ADDRESS=0.0.0.0
+    volumes:
+      - cassandra-node-1:/var/lib/cassandra:rw
+    restart: on-failure
+    healthcheck:
+      test: ["CMD-SHELL", "nodetool status"]
+      interval: 1m # Ridotto intervallo healthcheck per reattività
+      start_period: 2m
+      timeout: 30s # Aumentato timeout healthcheck
+      retries: 5
+
+  cassandra-2:
+    image: "cassandra:4.1"
+    container_name: "cassandra-2"
+    hostname: "cassandra-2" # Aggiunto per coerenza
+    # ports: # Rimossa esposizione porta CQL per nodo 2
+    #   - 9043:9042
+    networks:
+      - cassandra-net
+      - shared-net # Aggiunta rete condivisa
+    environment:
+      - CASSANDRA_CLUSTER_NAME=nosql-benchmark-cluster
+      - CASSANDRA_SEEDS=cassandra-1,cassandra-2 # Aggiornato per usare 2 seed
+      - CASSANDRA_DC=dc1
+      - CASSANDRA_RACK=rack1
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_LISTEN_ADDRESS=auto
+      - CASSANDRA_RPC_ADDRESS=0.0.0.0
+    depends_on:
+      cassandra-1:
+        condition: service_healthy # Fondamentale!
+    volumes:
+      - cassandra-node-2:/var/lib/cassandra:rw
+    restart: on-failure
+    healthcheck:
+      test: ["CMD-SHELL", "nodetool status"]
+      interval: 1m
+      start_period: 2m
+      timeout: 30s
+      retries: 5
+
+  cassandra-3:
+    image: "cassandra:4.1"
+    container_name: "cassandra-3"
+    hostname: "cassandra-3" # Aggiunto per coerenza
+    # ports: # Rimossa esposizione porta CQL per nodo 3
+    #   - 9044:9042
+    networks:
+      - cassandra-net
+      - shared-net # Aggiunta rete condivisa
+    environment:
+      - CASSANDRA_CLUSTER_NAME=nosql-benchmark-cluster
+      - CASSANDRA_SEEDS=cassandra-1,cassandra-2 # Aggiornato per usare 2 seed
+      - CASSANDRA_DC=dc1
+      - CASSANDRA_RACK=rack1
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_LISTEN_ADDRESS=auto
+      - CASSANDRA_RPC_ADDRESS=0.0.0.0
+    depends_on:
+      cassandra-2: # Dipende dal nodo 2 che a sua volta dipende dal nodo 1
+        condition: service_healthy # Fondamentale!
+    volumes:
+      - cassandra-node-3:/var/lib/cassandra:rw
+    restart: on-failure
+    healthcheck:
+      test: ["CMD-SHELL", "nodetool status"]
+      interval: 1m
+      start_period: 2m
+      timeout: 30s
+      retries: 5
+
+volumes:
+  cassandra-node-1:
+  cassandra-node-2:
+  cassandra-node-3:
